<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shrani_storitev"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/temno_modro"
    tools:context="com.jurext.belezenje_storitve.belezenje_storitev.Shrani_storitev"

    >

    <TextView
        android:textColor="@color/svetlo_modra"
        android:layout_marginTop="5sp"
        android:text="@string/vnos_podatkov"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textSize="24sp"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_marginTop="5sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/svetlo_modra"
            android:text="@string/storitev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="normal|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38sp">

            <EditText
                android:id="@+id/edit_storitev_"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/zelo_svetlo_zelena" />

            <Space
                android:layout_width="3sp"
                android:layout_height="match_parent" />

            <Spinner
                android:layout_width="match_parent"
                android:id="@+id/spinner_storitev"
                android:background="@color/svetlo_modra"
                android:layout_height="match_parent"/>
        </LinearLayout>


        <TextView
            android:textColor="@color/svetlo_modra"
            android:text="@string/stranka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="normal|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_stranka_"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/zelo_svetlo_zelena" />

            <Space
                android:layout_width="3sp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/spinner_oznaka"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/svetlo_modra" />
        </LinearLayout>

        <TextView
            android:textColor="@color/svetlo_modra"
            android:text="@string/kraj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="normal|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38sp"
            android:orientation="horizontal">

            <EditText
                android:maxLength="30"
                android:textColor="@color/zelo_svetlo_zelena"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:maxLines="1"
                android:id="@+id/edit_kraj_" />

            <Space
                android:layout_width="3sp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/spinner_kraj"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/svetlo_modra" />
        </LinearLayout>

        <TableRow
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="35sp">

            <TextView
                android:textColor="@color/svetlo_modra"
                android:text="@string/datum_start"
                android:gravity="center"
                android:layout_height="match_parent"
                android:id="@+id/textView5"
                android:textStyle="normal|italic"
                android:layout_width="60sp" />

            <TextView
                android:textColor="@color/zelo_svetlo_zelena"
                android:text="01.01.2001"
                android:layout_marginLeft="5sp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:id="@+id/text_datum_zacetek_"
                android:layout_width="80sp"
                android:textStyle="normal|bold" />

            <TextView
                android:textColor="@color/svetlo_modra"
                android:text="@string/datum_stop"
                android:layout_marginLeft="20sp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/textView7"
                android:layout_width="60sp"
                android:textStyle="normal|italic" />

            <TextView
                android:textColor="@color/zelo_svetlo_zelena"
                android:text="01.01.2001"
                android:layout_marginLeft="5sp"
                android:gravity="center"
                android:layout_width="80sp"
                android:layout_height="match_parent"
                android:id="@+id/text_datum_konec_"
                android:textStyle="normal|bold" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="30sp" >

            <TextView
                android:textColor="@color/svetlo_modra"
                android:text="@string/ura_start"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="normal|italic" />

            <TextView
                android:textColor="@color/zelo_svetlo_zelena"
                android:text="15:04"
                android:layout_marginLeft="5sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="normal|bold"
                android:id="@+id/text_cas_zacetek_" />

            <TextView
                android:textColor="@color/svetlo_modra"
                android:text="@string/ura_stop"
                android:layout_marginLeft="5sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="normal|italic" />

            <TextView
                android:textColor="@color/zelo_svetlo_zelena"
                android:text="15:04"
                android:layout_marginLeft="5sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="normal|bold"
                android:id="@+id/text_cas_konec_" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="30sp" >

            <TextView
                android:textColor="@color/svetlo_modra"
                android:gravity="center"
                android:text="@string/trajanje_storitve"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textView9"
                android:textAllCaps="true"
                android:textStyle="normal|italic" />

            <TextView
                android:textColor="@color/zelo_svetlo_zelena"
                android:gravity="center"
                android:text="00:00"
                android:layout_marginLeft="15sp"
                android:layout_height="match_parent"
                android:id="@+id/text_trajanje_storitve"
                android:layout_width="wrap_content"
                android:textStyle="normal|bold" />

        </TableRow>

        <TableRow
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="30sp" >

        </TableRow>

        <TableRow
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="70sp">

            <TableRow
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:background="@color/srednje_modra"
                    android:textColor="@color/svetlo_modra"
                    android:text="@string/izhod"
                    android:layout_marginRight="60sp"
                    android:layout_width="120sp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_izhod_"
                    android:textAllCaps="true"
                    android:textStyle="normal|italic"
                    android:onClick="IZHOD"
                    android:textSize="24sp" />

                <Button
                    android:background="@color/srednje_modra"
                    android:textColor="@color/svetlo_modra"
                    android:text="@string/shrani"
                    android:layout_width="120sp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_shrani_"
                    android:textAllCaps="true"
                    android:textStyle="normal|italic"
                    android:textSize="24sp"
                    android:elevation="0dp"
                    android:onClick="SHRANI" />
            </TableRow>
        </TableRow>


    </LinearLayout>

</LinearLayout>
