<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/temno_modro"
    tools:context="com.jurext.belezenje_storitve.belezenje_storitev.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_marginLeft="220sp"
        android:layout_height="40sp"
        android:text="Nastavitve"
        android:textSize="14sp"
        android:textColor="@color/svetlo_modra"
        android:onClick="odpriNastavitve"
        android:layout_width="100sp" />

    <TableRow
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="90sp" >

        <Button
            android:background="@color/srednje_modra"
            android:textColor="@color/svetlo_modra"
            android:text="@string/start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_start"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:onClick="START"
            android:textStyle="normal|italic" />
    </TableRow>

    <TableRow
        android:layout_marginTop="20sp"
        android:layout_height="120sp"
        android:orientation="horizontal"
        android:layout_width="350sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <TextView
                android:textColor="@color/svetlo_modra"
                android:gravity="center"
                android:text="@string/preteklicas"
                android:layout_width="match_parent"
                android:id="@+id/textView2"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:layout_height="40sp" />

            <Chronometer
                android:textColor="@color/svetlo_modra"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/belezi_delo_"
                android:textSize="45sp"
                android:textAllCaps="true"
                android:textStyle="normal|bold|italic" />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="90sp">

        <Button
            android:background="@color/srednje_modra"
            android:textColor="@color/svetlo_modra"
            android:text="@string/stop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_stop"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:textStyle="normal|italic"
            android:onClick="KONCAJSTORITEV" />
    </TableRow>

    <TableRow
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80sp">

            <Button
                android:background="@color/srednje_modra"
                android:textColor="@color/svetlo_modra"
                android:onClick="PREGLED_STORITEV"
                android:text="@string/pregled"
                android:layout_width="100sp"
                android:layout_height="match_parent"
                android:id="@+id/btn_pregled"
                android:layout_weight="1"
                android:textAllCaps="true"
                />

            <Button
                android:layout_marginLeft="15sp"
                android:background="@color/srednje_modra"
                android:textColor="@color/svetlo_modra"
                android:text="@string/resetiraj"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btn_reset"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:onClick="RESET" />

        </LinearLayout>
    </TableRow>
</LinearLayout>
